--- a/TamilMap.html
+++ b/TamilMap.html
@@ -17,7 +17,8 @@
         center: [12.8942, 80.0584],
         zoom: 10.0590,
         tangramOptions: {
-          scene: 'https://mapzen.com/api/scenes/29462/315/resources/basic.yaml'
+          scene: 'https://mapzen.com/api/scenes/29462/315/resources/basic.yaml',
+          apiKey: 'mapzen-yTcLzaF'
         }
       });
     </script>
