--- a/TamilMap.html
+++ b/TamilMap.html
@@ -13,12 +13,12 @@
   <body>
     <div id="map"></div>
     <script>
+      L.Mapzen.apiKey = 'mapzen-yTcLzaF';
       var map = L.Mapzen.map('map', {
         center: [12.8942, 80.0584],
         zoom: 10.0590,
         tangramOptions: {
           scene: 'https://mapzen.com/api/scenes/29462/315/resources/basic.yaml',
-          apiKey: 'mapzen-yTcLzaF'
         }
       });
     </script>
