--- a/TamilMap.html
+++ b/TamilMap.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ta">
+<html lang="en">
   <head>
     <title>தமிழ் இணைய வரைபடம்</title>
     <meta charset="utf-8">
@@ -13,12 +13,11 @@
   <body>
     <div id="map"></div>
     <script>
-      L.Mapzen.apiKey = 'mapzen-yTcLzaF';
       var map = L.Mapzen.map('map', {
-        center: [12.8942, 80.0584],
-        zoom: 10.0590,
+        center: [11.5482, 78.1815],
+        zoom: 8.1840,
         tangramOptions: {
-          scene: 'https://mapzen.com/api/scenes/29462/315/resources/basic.yaml',
+          scene: 'https://mapzen.com/api/scenes/29462/315/resources/basic.yaml'
         }
       });
     </script>
